option('enable-docs',
       type: 'boolean', value: false,
       description: 'Enable generating the Epoxy API reference (depends on Doxygen)')
option('enable-glx',
       type: 'combo',
       choices: [ 'auto', 'yes', 'no' ],
       value: 'auto',
       description: 'Enable GLX support')
option('enable-egl',
       type: 'combo',
       choices: [ 'auto', 'yes', 'no' ],
       value: 'auto',
       description: 'Enable EGL support')
option('x11',
       type: 'boolean',
       value: true,
       description: 'Enable X11 support (GLX or EGL-X11)')
